<resources>
    <string name="app_name">Bruno_Brasil_Irisi_Meko_COMP304_Sec003_Lab04</string>
    <string name="logo">Logo</string>
    <string name="login">LOGIN</string>
    <string name="username">Username:</string>
    <string name="add_patient">ADD/EDIT PATIENT</string>
    <string name="update_patient">DISPLAY/UPDATE PATIENT</string>
    <string name="add_test">ADD</string>
    <string name="update_test">VIEW</string>
    <string name="updateimageicon">UpdateImageIcon</string>
    <string name="addpatienticon">AddPatientIcon</string>
    <string name="addtesticon">AddTestIcon</string>
    <string name="updatetesticon">UpdateTestIcon</string>
    <string name="patients">PATIENTS</string>
    <string name="tests">TESTS</string>
    <string name="enter_patient_information">ENTER PATIENT INFORMATION</string>
    <string name="first_name">First Name :</string>
    <string name="last_name">Last Name :</string>
    <string name="department">Department :</string>
    <string name="room">Room :</string>
    <string name="insert_first_name">Insert First Name</string>
    <string name="insert_last_name">Insert Last Name</string>
    <string name="insert_department">Insert Department</string>
    <string name="insert_nurse_id">Insert Nurse ID</string>
    <string name="insert_room_number">Insert Room Number</string>
    <string name="patienticon">PatientIcon</string>
    <string name="bph">BPH</string>
    <string name="temperature">Temperature</string>
    <string name="bphtextview">BPH :</string>
    <string name="price">Price :</string>
    <string name="bpl">BPL :</string>
    <string name="nurse_id">Nurse ID :</string>
    <string name="patient_id">Patient ID :</string>
    <string name="test_type">Test Type :</string>
    <string name="test_id">Test ID :</string>
    <string name="enter_test_information">ENTER TEST INFORMATION</string>
    <string name="bpltextview">BPL</string>
    <string name="nurse_id_test">Nurse ID</string>
    <string name="patient_id_test">Patient ID</string>
    <string name="test_type_test">Test Type</string>
    <string name="test_id_test">Test ID</string>
    <string name="price_test">Price</string>
    <string name="save">SAVE</string>
    <string name="viewtestupdate">ViewTestUpdate</string>
    <string name="view_test_information">VIEW TEST INFORMATION</string>
    <string name="test_id_result">Test ID Result</string>
    <string name="test_type_result">Test Type Result</string>
    <string name="patient_id_result">Patient ID Result</string>
    <string name="nurse_id_result">Nurse ID Result</string>
    <string name="bpl_result">BPL Result</string>
    <string name="bph_result">BPH Result</string>
    <string name="temperature_result">Temperature Result</string>
    <string name="price_result">Price Result</string>
</resources>
