<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.AddEditPatientActivity">


    <EditText
        android:id="@+id/editTextPatientID"
        android:layout_width="269dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="Insert Patient ID only for Update"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/textViewFirstName"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <EditText
        android:id="@+id/editTextFirstName"
        android:layout_width="191dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:hint="@string/insert_first_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/textViewFirstName"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textViewFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="72dp"
        android:text="@string/first_name"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <EditText
        android:id="@+id/editTextLastName"
        android:layout_width="191dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/insert_last_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/textViewLastName"
        app:layout_constraintTop_toBottomOf="@+id/editTextFirstName" />

    <TextView
        android:id="@+id/textViewLastName"
        android:layout_width="100dp"
        android:layout_height="23dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:text="@string/last_name"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewFirstName" />

    <EditText
        android:id="@+id/editTextDepartment"
        android:layout_width="191dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/insert_department"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/textViewDepartment"
        app:layout_constraintTop_toBottomOf="@+id/editTextLastName" />

    <TextView
        android:id="@+id/textViewDepartment"
        android:layout_width="101dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/department"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLastName" />

    <EditText
        android:id="@+id/editTextNurseID"
        android:layout_width="191dp"
        android:layout_height="43dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/insert_nurse_id"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/textViewNurse"
        app:layout_constraintTop_toBottomOf="@+id/editTextDepartment" />

    <TextView
        android:id="@+id/textViewNurse"
        android:layout_width="78dp"
        android:layout_height="21dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:text="@string/nurse_id"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDepartment" />

    <EditText
        android:id="@+id/editTextRoom"
        android:layout_width="191dp"
        android:layout_height="43dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/insert_room_number"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/textViewRoomNumber"
        app:layout_constraintTop_toBottomOf="@+id/editTextNurseID" />

    <TextView
        android:id="@+id/textViewRoomNumber"
        android:layout_width="62dp"
        android:layout_height="24dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:text="@string/room"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNurse" />

    <TextView
        android:id="@+id/textViewPatientId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="Patient ID:"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textViewMessage"
        android:layout_width="350dp"
        android:layout_height="34dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonUpdate"
        app:layout_constraintVertical_bias="0.211" />

    <TextView
        android:id="@+id/textViewEnterPatient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="ENTER/UPDATE PATIENT INFORMATION"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="117dp"
        android:layout_height="112dp"
        android:contentDescription="@string/patienticon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEnterPatient"
        app:srcCompat="@drawable/patient_icon" />

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="139dp"
        android:layout_height="72dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#4DBB92"
        android:text="ADD"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRoom" />

    <Button
        android:id="@+id/buttonUpdate"
        android:layout_width="139dp"
        android:layout_height="72dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#4DBB92"
        android:text="UPDATE"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.779"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRoom" />

</androidx.constraintlayout.widget.ConstraintLayout>